# super-apollonian-cpp

./: .gitignore  HACKING.md  README.md  SConstruct  meson.build  run.sh  setup.sh
src/: apollonian.cpp  apollonian.hpp  box.hpp  circle.cpp  circle.hpp  color.cpp  color.hpp  concurrency.cpp  concurrency.hpp  filters.cpp  filters.hpp  graphics.cpp  graphics.hpp  groups.hpp  image_buffer.hpp  io.cpp  io.hpp  main.cpp  mobius.cpp  mobius.hpp  permutation.hpp  render.cpp  render.hpp  riemann_sphere.cpp  riemann_sphere.hpp  test_image_buffer.cpp  transformation_graph.hpp  visitor.cpp  visitor.hpp
